<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NAFacial</string>
    
    <!-- Shortcut labels -->
    <string name="shortcut_facial_verification_short">Verify</string>
    <string name="shortcut_facial_verification_long">Facial Verification</string>
    
    <string name="shortcut_live_recognition_short">Live Scan</string>
    <string name="shortcut_live_recognition_long">Live Facial Recognition</string>
    
    <string name="shortcut_personnel_database_short">Database</string>
    <string name="shortcut_personnel_database_long">Personnel Database</string>
    
    <string name="shortcut_settings_short">Settings</string>
    <string name="shortcut_settings_long">System Settings</string>
</resources>
